--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.jpa.properties.hibernate.type=trace
 
 # desativa o auto incremento do JPA (o banco possui esse recurso)
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
+
+server.port=8081
