--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,9 @@ spring.jpa.properties.hibernate.type=trace
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
 
 server.port=8081
+
+# JWT
+jwt.secret=_@HRL&L3tF?Z7ccj4z&L5!nU2B!Rjs3_
+
+# token com duração de 7 dias
+jwt.expiration=604800
