--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -12,3 +12,11 @@ spring.jpa.properties.hibernate.type=trace
 
 # desativa o auto incremento do JPA (o banco possui esse recurso)
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
+
+server.port=8080
+
+# JWT
+jwt.secret=_@HRL&L3tF?Z7ccj4z&L5!nU2B!Rjs3_
+
+# token com duração de 7 dias
+jwt.expiration=604800
